--- a/PrivateSchoolCRUD/html/editTrainerPerCourse.html
+++ b/PrivateSchoolCRUD/html/editTrainerPerCourse.html
@@ -69,18 +69,21 @@
                     <td>20/02/2019</td>
                 </tr>
             </table>
-            <div id="trainer">
-                <label for="trainer">Choose a trainer:</label>
-                <select name="trainer">
-                    <option>Makis Fontas</option>
-                    <option>Zoi Pavlou</option>
-                    <option>Vaggelis Mortis</option>
-                </select>
+            <div id="select-and-button">
+                <div>
+                    <label for="trainer">Choose a trainer:</label>
+                    <select name="trainer">
+                        <option>Makis Fontas</option>
+                        <option>Zoi Pavlou</option>
+                        <option>Vaggelis Mortis</option>
+                    </select>
+                </div>
+                <div>
+                    <button>Confirm</button>
+                </div>
             </div>
         </div>
-        <div>
-        <button>Confirm</button>
-        </div>
+
         <footer>
             <p>
                 Copyright &#169; 2020 by ALIAS, <br>
