--- a/PrivateSchoolCRUD/html/updateAssiPerCourse.html
+++ b/PrivateSchoolCRUD/html/updateAssiPerCourse.html
@@ -77,18 +77,21 @@
                     <td>20/02/2020</td>
                 </tr>
             </table>
-            <div id="assi">
-                <label for="assignment">Choose an assignment:</label>
-                <select name="assignment">
-                    <option>Private School</option>
-                    <option>Prime Numbers</option>
-                    <option>Web Page</option>
-                </select>
+            <div id="select-and-button">
+                <div id="assi">
+                    <label for="assignment">Choose an assignment:</label>
+                    <select name="assignment">
+                        <option>Private School</option>
+                        <option>Prime Numbers</option>
+                        <option>Web Page</option>
+                    </select>
+                </div>
+                <div>
+                    <button>Update</button>
+                </div>
             </div>
         </div>
-        <div>
-            <button>Update</button>
-        </div>
+
         <footer>
             <p>
                 Copyright &#169; 2020 by ALIAS, <br>
