--- a/PrivateSchoolCRUD/html/updateStudPerCourse.html
+++ b/PrivateSchoolCRUD/html/updateStudPerCourse.html
@@ -73,17 +73,19 @@
                     <td>20/02/2019</td>
                 </tr>
             </table>
-            <div id="stud">
-                <label for="student">Choose a student:</label>
-                <select name="student">
-                    <option>Makis Fontas</option>
-                    <option>Zoi Pavlou</option>
-                    <option>Vaggelis Mortis</option>
-                </select>
+            <div id="select-and-button">
+                <div id="stud">
+                    <label for="student">Choose a student:</label>
+                    <select name="student">
+                        <option>Makis Fontas</option>
+                        <option>Zoi Pavlou</option>
+                        <option>Vaggelis Mortis</option>
+                    </select>
+                </div>
+                <div>
+                    <button>Update</button>
+                </div>
             </div>
-        </div>
-        <div>
-        <button>Update</button>
         </div>
         <footer>
             <p>
