--- a/PrivateSchoolCRUD/html/updateTrainerPerCourse.html
+++ b/PrivateSchoolCRUD/html/updateTrainerPerCourse.html
@@ -69,17 +69,19 @@
                     <td>20/02/2019</td>
                 </tr>
             </table>
-            <div id="trainer">
-                <label for="trainer">Choose a trainer:</label>
-                <select name="trainer">
-                    <option>Makis Fontas</option>
-                    <option>Zoi Pavlou</option>
-                    <option>Vaggelis Mortis</option>
-                </select>
+            <div id="select-and-button">
+                <div>
+                    <label for="trainer">Choose a trainer:</label>
+                    <select name="trainer">
+                        <option>Makis Fontas</option>
+                        <option>Zoi Pavlou</option>
+                        <option>Vaggelis Mortis</option>
+                    </select>
+                </div>
+                <div>
+                    <button>Update</button>
+                </div>
             </div>
-        </div>
-        <div>
-        <button>Update</button>
         </div>
         <footer>
             <p>
